--- a/usermgnt/templates/StudentLoginPage.html
+++ b/usermgnt/templates/StudentLoginPage.html
@@ -17,7 +17,7 @@
 	<p>
 	<form action="/usermgnt/student/login" method="POST"><p>
 		{% csrf_token %}
-		  <label for="textfield">Username:</label>
+		  <label for="textfield">Student ID</label>
           <input name="username" type="text" required="required" id="username" >
 		</p>
 	<p>
