--- a/selectcourse/templates/TermPage.html
+++ b/selectcourse/templates/TermPage.html
@@ -62,10 +62,10 @@
             <td width="50%" height="21" align="center" bgcolor="#DEE0DF" >&nbsp;<strong>Management</strong>&nbsp;</td>
           </tr>
           {% for term in termlist %}
-              <tr>
+              <tr onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
               <form action="term/update/{{term.termid}}" method="POST">
                   {% csrf_token %}
-                  <td align="center" bgcolor="#FFFFFF"><label for="textfield" id="lblTerm{{term.termid}}">{{term.termname}}</label>
+                  <td onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'" align="center" bgcolor="#FFFFFF"><label for="textfield" id="lblTerm{{term.termid}}">{{term.termname}}</label>
                       <input size="30" type="text" name="txtTerm{{term.termid}}" id="txtTerm{{term.termid}}" style="display: none" value="{{term.termname}}">
                   </td>
                   <td height="21" align="center">
