--- a/usermgnt/templates/RollCall.html
+++ b/usermgnt/templates/RollCall.html
@@ -1,4 +1,3 @@
-
 {% load static %}
 
 <!doctype html>
@@ -30,7 +29,7 @@
                 <img src="/static/images/Untitled.png" width="14" height="70" alt=""/>
           </p></th>
         </tr>
-      </tbody>'
+      </tbody>
 </table>
 <table width="100%" height="62" border="0">
   <tbody>
