--- a/rollcallmodule/templates/History.html
+++ b/rollcallmodule/templates/History.html
@@ -39,13 +39,29 @@ function edit(i)
 
 	function changedate(dateid)
             {
-                url="/rollcallmodule/history/"+dateid;
-                gourl(url);
+                var table = document.getElementById("historyTable")
+                var rows = table.getElementsByTagName("tr")
+                r = "tr"+dateid
+                for(var i =0; i < rows.length; i++)
+                {
+                    row = rows[i]
+                    if (row.className == '')
+                    {
+                    }
+                    else if (r == 'tr0'){
+                        row.style = 'display:'
+                    }
+                    else if (row.className == r) {
+                        row.style = 'display:'
+                    }
+                    else
+                        row.style = 'display:none'
+                }
             }
 
 		</script>
 <body>
-<table width="100%" border="0">
+<table id="historyTable" width="100%" border="0">
   <tbody>
     <tr>
       <th colspan="3" align="left" valign="middle" bgcolor="#228744" scope="col" border="0" cellpadding="0" cellspacing="0"><img src="/static/images/history.jpg" width="58" height="61" alt=""/><span style="font-size: 36px; color: #FAF9F9">Attendance Details</span></th>
@@ -54,19 +70,17 @@ function edit(i)
       <td width="1%" bgcolor="#228744">&nbsp;</td>
       <td width="98%"><table width="100%" border="1" cellpadding="0" cellspacing="0">
         <tbody>
-{#          <tr>#}
-{#            <td height="21" colspan="7" align="left" valign="middle" bgcolor="#ACB0AE">Date:#}
-{#				 <select name="attdateid" class="inputbox1" id="attdateid" onchange="changedate(this.value)">#}
-{#                    {% for attdate  in  attdatelist %}#}
-{#                    {% if attdateid == attdate.attdateid %}#}
-{#                    <option value="{{attdateid}}" selected>{{attdate.attdate}}</option>#}
-{#                    {% else %}#}
-{#                    <option value="{{attdate.attdateid}}">{{attdate.attdate}}</option>#}
-{#                    {% endif %}#}
-{#                    {% endfor %}#}
-{#                </select>#}
-{##}
-{#            </tr>#}
+          <tr>
+            <td height="21" colspan="7" align="left" valign="middle" bgcolor="#ACB0AE">Date:
+				 <select name="attdateid" class="inputbox1" id="attdateid" onchange="changedate(this.value)">
+                        <option value="0">Select</option>
+                     {% for dt in datelist %}
+                         <option value="{{ dt.attdateid }}">{{ dt.attdate|date:"Y-m-d"}}</option>
+                     {% endfor %}
+                </select>
+            </td>
+          </tr>
+
           <tr>
 			<td width="9%" height="21" align="center" bgcolor="#DEE0DF">Attendance Date</td>
             <td width="9%" height="21" align="center" bgcolor="#DEE0DF">Student Number</td>
@@ -78,7 +92,7 @@ function edit(i)
             </tr>
           <tr ></tr>
 			{% for attd in attdlist %}
-          <tr align="center" onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
+          <tr align="center" class="tr{{ attd.attendetails.attdateid }}" onMouseOver="this.style.background='#BBF8B3'" onMouseOut="this.style.background='#FFFFFF'">
               <td>{{ attd.attdatetime }}</td>
 			  <td>{{ attd.studetails.stunum }}</td>
                   <td>{{ attd.studetails.stuname }}</td>
